# SPDX-License-Identifier: MIT

cmake_minimum_required(VERSION 3.15)

add_subdirectory(poisson)
add_subdirectory(geometry)
add_subdirectory(geometryMX)
add_subdirectory(time_integration)
add_subdirectory(time_integration_hybrid)
add_subdirectory(rhs)
add_subdirectory(boltzmann)
add_subdirectory(initialization)
add_subdirectory(utils)
